  17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> -gitlab-gitaly-0.23.0.ebuild:
  www-servers/gitlab-gitaly:  Prune unneeded version.

*gitlab-gitaly-0.38.0 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-gitaly-0.38.0.ebuild:
  www-servers/gitlab-gitaly:  Add version 0.38.0.

  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-gitaly-0.10.0.conf, -files/gitlab-gitaly-0.10.0.init,
  -gitlab-gitaly-0.16.0.ebuild:
  www-servers/gitlab-gitaly:  Prune version 0.16.0 and unneeded files

  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
  -files/0002-gitlab-gitaly-0.10.0-fix-config.toml.example.patch,
  -gitlab-gitaly-0.11.0.ebuild, gitlab-gitaly-0.10.0.ebuild,
  gitlab-gitaly-0.3.0.ebuild, gitlab-gitaly-0.6.0.ebuild:
  www-servers/gitlab-gitaly:  Prune version 0.11.0 and cleanup other versions

*gitlab-gitaly-0.35.0-r1 (06 Sep 2017)

  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-gitaly-0.35.0-r1.ebuild, -gitlab-gitaly-0.35.0.ebuild,
  files/0002-gitlab-gitaly-0.35.0-fix-config.toml.example.patch:
  www-servers/gitlab-gitaly:  Emergency fix: Use correct installation path of
  gitlab-shell in the config file.

*gitlab-gitaly-0.35.0 (05 Sep 2017)

  05 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0002-gitlab-gitaly-0.35.0-fix-config.toml.example.patch,
  +gitlab-gitaly-0.35.0.ebuild:
  www-servers/gitlab-gitaly:  Add ebuild for version 0.35.0; dependency of
  gitlab-ce-9.5.3.

*gitlab-gitaly-0.21.2 (25 Jul 2017)
*gitlab-gitaly-0.23.0 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-gitlab-gitaly-0.23.0-fix-Makefile.patch,
  +gitlab-gitaly-0.21.2.ebuild, +gitlab-gitaly-0.23.0.ebuild:
  www-servers/gitlab-gitaly:  Add new versions of gitaly

*gitlab-gitaly-0.16.0 (09 Jul 2017)

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-gitaly-0.16.0.ebuild:
  www-servers/gitlab-gitaly:  Add ebuild for gitlab-gitaly-0.16.0

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch>