@@ -11,8 +11,8 @@ EBUILD gitlab-gitaly-0.10.0.ebuild 776 SHA256 08e08d43d9ec359f418d13cdfbd7c2560c
 EBUILD gitlab-gitaly-0.11.2-r1.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
 EBUILD gitlab-gitaly-0.21.2.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
 EBUILD gitlab-gitaly-0.3.0.ebuild 776 SHA256 8d916fec7805c40859db18bc558abb8fd87e6d447583a4fec721c2dbe0befd58 SHA512 eb5f0863b236603d39b6afcca772f86a7153f91bacbb49041ffc5efd5f22f0c028966da054ba92e0a30838e09fcf52fcabff40ef8138945c1b585ed234643e52 WHIRLPOOL 265da4265e6e0a3cc7ba2f22a796c6aef639f463e9558223a0eca578bcfe325c97feb42ca697066b7ec88161fa1e64b0dde19a0c17a4b2ed3c6462a863f82ecd
-EBUILD gitlab-gitaly-0.35.0-r1.ebuild 1108 SHA256 c041a2e7f8f29485a0a9ec56615fbcd75e5b0a7ca0afcff1ffad0b095efc0101 SHA512 868f9fb01ce5b78bd906e2ae8fa0093ae41931856bce25602c3cc2d109779afb7e643e0032d650bfa03a2424f8edb89dbcc680e7daa5a93d69545cd0c8c69263 WHIRLPOOL 2584b50d63e3aed372062b97d4c5093f520940fed0ade166c71d03ec7a50b6679da9544d9bcb7c6ba720f07de9ec54e6dca1f0bc3baf705828e41c642d4aa14a
-EBUILD gitlab-gitaly-0.38.0.ebuild 1000 SHA256 af0a1d26cf628049f2ba52f7ab87d7cde5fbe0d10f25da9b30df26b774e27de0 SHA512 09a4168891cb419f8486fb0680a381eb1ea7008dff7332ae2f884890b8960b2a3e19ba2eb704105da2fc7c90d139f53f7b0b8d34ea4eff83e55e6d10a1e564af WHIRLPOOL 25e32ca020fa6024cbf9608aab22f313687c0d58979316899bb58a2fd5d67245c79e0d6990585c4295fc9b3bd2b37ba5e1db91166ad14aff74ae43788b79e3a3
+EBUILD gitlab-gitaly-0.35.0-r2.ebuild 1155 SHA256 1fd12e02b2d9dff662480cd603b4c85c2e16c3279323ce8593786a5c333da7d1 SHA512 c9d5ae28e8bf0cd50c71310fd79f371063dbed4c5dc401b82c2edbfcac45df721f9242994a9a4063b374d7d4d14a1326b858eaf193ed128bbea7ccec1554b67e WHIRLPOOL dee3c80c343325693598cc960f18d6ce38f7d6e8c086273b1a13c530d521636f074b0bdda33727c8005ca03d602014f818f9a3b3d40690ce0657f2b6aa878540
+EBUILD gitlab-gitaly-0.38.0-r1.ebuild 1047 SHA256 7dc18979ce780d9b924e0caf31827e7ced1aeebce376aa8e04cd1eab73fa891a SHA512 43401bf4d77b9eb127649e2a4ed13d81b45aa9e3303f029583b189d25297cdc9e6d54a99f54d346f91bcdd6b31a35c011bc76fc2bca9bb3318e4247500a95a4b WHIRLPOOL 54e909f59b29d14950944a8743c80e64cc39e436d92f415cd3356c6a70cc4f65ad25333019e3c6f0b3da6afdd4dbfea7214d42ffe14e0e367ea6bb984e7fcd21
 EBUILD gitlab-gitaly-0.6.0.ebuild 776 SHA256 08e08d43d9ec359f418d13cdfbd7c2560c236f8102cb2cc16739569ad112ac1e SHA512 7be112d99f8dc1353af718bc7551fb5c9e616179ce494853b60f77a099850abc689f25b0587db056ef1dd90dfa90b77cba72d6afb8e663841e0162667d4b7628 WHIRLPOOL ec245d5028174a264730997fa66907a187a7ef58ed4cecfb287bead932b8cbd2f2073311f0b8f5f8c5381e11a4c811dd5738e8bd0d357183f0fb3706e909899d
-MISC ChangeLog 3489 SHA256 387f25ad9f4cd60b0dde48c4bbe70a9167dd1b8795919526c48d894fa8c7e20a SHA512 350daf35730580dedbb17ded2bde4ad3dda136630114c52f104199cda7b1bbc685f183f017039f8479c4bc11d363bad3d484bf32a96cced76283e86987dd5197 WHIRLPOOL f70ce79d4542ac4724f64d817845d4915664dd14af10b04835814c65079bed4d2ff6822aa9799ce117551588c5b64e803cb95c6e26c50fc0e07bf125ae7e9aea
+MISC ChangeLog 3812 SHA256 7d75e5deced4957ef8ab79ced1f0aaca00cb8bee31d0e3ea5416392df87be989 SHA512 06f1ca731518730994ab8b6f9d248586279ebcc2d9949686947d2652e602a5e58d7e3359c540e7231a84a49c0c7f02166cc6f275aa7c57fda1398adf6951f633 WHIRLPOOL 299683d55991db8a72ac227e42a683ab01245df8b025e5c63c090e36e9586e1fdc3f0a2ebef0851bde23e99ab51c93df1b0f5570665b86e1a2970b231b1bf354
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
