@@ -1,3 +1,11 @@
+*gitlab-gitaly-0.35.0-r2 (25 Sep 2017)
+*gitlab-gitaly-0.38.0-r1 (25 Sep 2017)
+
+  25 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
+  +gitlab-gitaly-0.35.0-r2.ebuild, +gitlab-gitaly-0.38.0-r1.ebuild,
+  -gitlab-gitaly-0.35.0-r1.ebuild, -gitlab-gitaly-0.38.0.ebuild:
+  www-servers/gitlab-gitaly:  Make gitaly-ruby executable.
+
   17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> -gitlab-gitaly-0.23.0.ebuild:
   www-servers/gitlab-gitaly:  Prune unneeded version.
 
